Added user input functionality